Details
-
Bug
-
Status: Closed
-
Critical
-
Resolution: Fixed
-
6.5.0
-
Untriaged
-
Unknown
Description
Build: 6.5.0-4858
Eventing sanity is failing as bucket op failed with LCB_27 (COUCHBASE_CLIENT_ENOCONF)
./testrunner -i /tmp/testexec.14323.ini -p get-cbcollect-info=False,get-cbcollect-info=True -t eventing.eventing_sanity.EventingSanity.test_create_mutation_for_dcp_stream_boundary_from_beginning,nodes_init=4,services_init=kv-eventing-index-n1ql,dataset=default,groups=simple,reset_services=True,skip_cleanup=True
|
|
Exception: Bucket operations from handler code took lot of time to complete or didn't go through. Current : 0 Expected : 2016 dcp_backlog : 0 TIMERS_IN_PAST : 0 lcb_exceptions : {'[fd63:6f75:6368:20d4:b164:126b:5258:cac6]': {u'27': 1884}}
|
Failure summary
vikass-MacBook-Pro:~ vikaschaudhary$ python jenkins_log_parser.py http://qa.sc.couchbase.com/job/test_suite_executor/176478
|
1 test_create_mutation_for_dcp_stream_boundary_from_beginning
|
Exception: Bucket operations from handler code took lot of time to complete or didn't go through. Current : 0 Expected : 2016 dcp_backlog : 0 TIMERS_IN_PAST : 0 lcb_exceptions : {'[fd63:6f75:6368:20d4:b164:126b:5258:cac6]': {u'27': 1884}}
|
|
|
2 test_delete_mutation_for_dcp_stream_boundary_from_beginning
|
Exception: Bucket operations from handler code took lot of time to complete or didn't go through. Current : 0 Expected : 2016 dcp_backlog : 0 TIMERS_IN_PAST : 0 lcb_exceptions : {'[fd63:6f75:6368:20d4:b164:126b:5258:cac6]': {u'27': 1803}}
|
|
|
3 test_update_mutation_for_dcp_stream_boundary_from_now
|
Exception: Bucket operations from handler code took lot of time to complete or didn't go through. Current : 0 Expected : 2016 dcp_backlog : 0 TIMERS_IN_PAST : 0 lcb_exceptions : {'[fd63:6f75:6368:20d4:b164:126b:5258:cac6]': {u'27': 2016}}
|
|
|
4 test_expiry_mutation_for_dcp_stream_boundary_from_beginning
|
Exception: Bucket operations from handler code took lot of time to complete or didn't go through. Current : 0 Expected : 2016 dcp_backlog : 0 TIMERS_IN_PAST : 0 lcb_exceptions : {'[fd63:6f75:6368:20d4:b164:126b:5258:cac6]': {u'27': 1885}}
|
|
|
7 test_doc_timer_events_from_handler_code_with_bucket_ops
|
Exception: Bucket operations from handler code took lot of time to complete or didn't go through. Current : 0 Expected : 2016 dcp_backlog : 0 TIMERS_IN_PAST : 0 lcb_exceptions : {'[fd63:6f75:6368:20d4:b164:126b:5258:cac6]': {u'27': 1802}}
|
|
|
9 test_cron_timer_events_from_handler_code_with_bucket_ops
|
Exception: Bucket operations from handler code took lot of time to complete or didn't go through. Current : 0 Expected : 2016 dcp_backlog : 0 TIMERS_IN_PAST : 0 lcb_exceptions : {'[fd63:6f75:6368:20d4:b164:126b:5258:cac6]': {u'27': 1802}}
|
|
|
10 test_delete_bucket_operation_from_handler_code
|
Exception: Bucket operations from handler code took lot of time to complete or didn't go through. Current : 0 Expected : 2016 dcp_backlog : 0 TIMERS_IN_PAST : 0 lcb_exceptions : {'[fd63:6f75:6368:20d4:b164:126b:5258:cac6]': {u'27': 1886}}
|
|
|
11 test_timers_without_context
|
Exception: Bucket operations from handler code took lot of time to complete or didn't go through. Current : 0 Expected : 2016 dcp_backlog : 0 TIMERS_IN_PAST : 0 lcb_exceptions : {'[fd63:6f75:6368:20d4:b164:126b:5258:cac6]': {u'27': 1773}}
|
|
|
12 test_cancel_timers_with_timers_being_overwritten
|
Exception: Bucket operations from handler code took lot of time to complete or didn't go through. Current : 0 Expected : 2016 dcp_backlog : 0 TIMERS_IN_PAST : 0 lcb_exceptions : {'[fd63:6f75:6368:20d4:b164:126b:5258:cac6]': {u'27': 1227}}
|
|
|
13 test_source_bucket_mutations_with_timers
|
Exception: Bucket operations from handler code took lot of time to complete or didn't go through. Current : 2016 Expected : 4032 dcp_backlog : 0 TIMERS_IN_PAST : 0 lcb_exceptions : {'[fd63:6f75:6368:20d4:b164:126b:5258:cac6]': {u'27': 1314}}
|
|
|
14 test_source_bucket_mutations
|
Exception: Bucket operations from handler code took lot of time to complete or didn't go through. Current : 2016 Expected : 4032 dcp_backlog : 0 TIMERS_IN_PAST : 0 lcb_exceptions : {'[fd63:6f75:6368:20d4:b164:126b:5258:cac6]': {u'27': 1886}}
|
|
|
15 test_source_doc_mutations
|
Exception: Eventing has not processed all the mutation in expected time, docs:0 expected doc: 2016
|
|
|
16 test_source_doc_mutations_with_timers
|
Exception: Eventing has not processed all the mutation in expected time, docs:0 expected doc: 2016
|
|
|
17 test_pause_resume_execution
|
Exception: Eventing took lot of time for handler Function_991174942_test_pause_resume_execution to paused
|
|
|
18 test_source_bucket_mutation_for_dcp_stream_boundary_from_now
|
Exception: Eventing has not processed all the dcp_mutation. Current : 2016 Expected : 4032
|
|
|
19 test_compress_handler
|
Exception: Bucket operations from handler code took lot of time to complete or didn't go through. Current : 0 Expected : 2016 dcp_backlog : 0 TIMERS_IN_PAST : 0 lcb_exceptions : {'[fd63:6f75:6368:20d4:b164:126b:5258:cac6]': {u'27': 1887}}
|
only n1ql op test passed
http://qa.sc.couchbase.com/job/test_suite_executor/176478/consoleText
Build couchbase-server-6.5.0-4893 contains eventing commit 24bab97 with commit message:
MB-37040MB-37020Merge remote-tracking branch 'couchbase/unstable' into