MB-37020: Fix bucket get failure for IPv6 cluster

* The address passed to libcouchbase for connecting
  to the bucket during bucket get was formatted
  wrongly causing libcouchbase bootstrap issues.
  This change formats the address properly to fix
  the issue.

Change-Id: Ia122e349175864b4535c5dabd8a11cacec490434
Reviewed-on: http://review.couchbase.org/118480
Reviewed-by: Gautham B A <gautham.bangalore@gmail.com>
Tested-by: Jeelan Basha Poola <jeelan.poola@couchbase.com>